appId: com.raycatdev.hideandseek.v2
---
- runFlow:
      when:
          platform: Android
      commands:
          - setPermissions:
                permissions:
                    location: allow
- runFlow:
      when:
          platform: iOS
      commands:
          - setPermissions:
                permissions:
                    location: inuse
- setLocation:
      latitude: 35.64957465
      longitude: 139.7408995
- openLink: ${MAESTRO_DEV_CLIENT_URL}
- waitForAnimationToEnd:
      timeout: 5000
- runFlow:
      when:
          visible: "Open"
      commands:
          - tapOn: "Open"
- waitForAnimationToEnd:
      timeout: 3000
- runFlow:
      when:
          visible: "Continue"
      commands:
          - tapOn: "Continue"
          - extendedWaitUntil:
                visible: "Connected to:"
                timeout: 20000
          - tapOn:
                point: "91%,48%"
          - waitForAnimationToEnd:
                timeout: 3000
- extendedWaitUntil:
      notVisible: "Continue"
      timeout: 60000
