appId: com.raycatdev.hideandseek.v2
---
- clearState
- runFlow: bootstrap.yaml
- swipe:
      start: "50%,85%"
      end: "50%,45%"
      duration: 500
- tapOn: "Questions"
- waitForAnimationToEnd:
      timeout: 1000
- assertVisible: ".*No questions yet.*"
- tapOn: "Add question"
- waitForAnimationToEnd:
      timeout: 1000
- tapOn: "Add radar question"
- extendedWaitUntil:
      visible: ".*Current distance 500 m"
      timeout: 30000
- assertVisible: ".*Unanswered answer.*"
- tapOn: "Radar distance 1km"
- extendedWaitUntil:
      visible: ".*Current distance 1000 m"
      timeout: 30000
- tapOn: "Miss answer"
- waitForAnimationToEnd:
      timeout: 1000
- swipe:
      start: "50%,15%"
      end: "50%,85%"
      duration: 500
- takeScreenshot: e2e/artifacts/radar-question/radar-question-map
